# 2110446-traffy-fondue

./: class_list.txt
traffy_downloader/: Cargo.toml
traffy_downloader/src/: main.rs
traffy_processor/: clean.ipynb  multiclasser.ipynb
traffy_train/: image_downloader.ipynb  urls_download.sh
